--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,3 +19,24 @@ html{
   max-width: 1140px;
   margin: 0 auto;
 }
+
+/* Header */
+header{
+  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(img/hero.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+}
+
+.hero-text-box{
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  transform: translate(-50%, -50%);
+}
+
+header h1{
+  margin: 0;
+}
