styled buttons and header text

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -31,12 +31,55 @@ header{
 .hero-text-box{
   position: absolute;
   width: 100%;
-  top: 50%;
-  left: 50%;
-  text-align: center;
-  transform: translate(-50%, -50%);
+  top: 40%;
+  left: 10%;
+  /* text-align: center; */
+  /* transform: translate(-50%, -25%); */
 }
 
 header h1{
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 20px;
+  color: white;
+  font-size: 240%;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  word-spacing: 4px;
+}
+
+.btn:link, .btn:visited{
+  display: inline-block;
+  padding: 10px 30px;
+  font-weight: 300;
+  text-decoration: none;
+  border-radius: 200px;  
+  transition: background-color 0.2s, border 0.2s, color 0.2s;
+  margin-right: 15px;
+}
+
+.btn-full:link, .btn-full:visited{
+  background-color: #e67e22;
+  border: 1px solid #e67e22;
+  color: white;
+}
+
+.btn-ghost:link, .btn-ghost:visited{
+  border: 1px solid #e67e22;
+  color: #e67e22;
+}
+
+
+/* .btn:hover, btn:active{
+  background-color: #cf6d17;
+} */
+
+.btn-full:hover, .btn-full:active{
+  border: 1px solid #cf6d17;
+  background-color: #cf6d17;
+}
+
+.btn-ghost:hover, .btn-ghost:active{
+  border: 1px solid white;
+  color: white;
 }
