--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,11 +1,17 @@
+/* Orange Color #e67e22 */
+
+/* --------------------------- */
 /* All Elements */
+/* --------------------------- */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+/* --------------------------- */
 /* Body */
+/* --------------------------- */
 html{  
   background-color: #fff;
   color: #555;
@@ -13,6 +19,9 @@ html{
   font-weight: 300;
   font-size: 20px;
   text-rendering: optimizeLegibility;
+  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(img/hero.jpg);
+  background-size: cover;
+  background-position: center;
 }
 
 .row{
@@ -20,11 +29,46 @@ html{
   margin: 0 auto;
 }
 
+/* --------------------------- */
+/* Navigation Bar */
+/* --------------------------- */
+.logo{
+  height: 100px;
+  width: auto;
+  position: absolute;
+  left: 10%;
+  margin-top: 20px;
+}
+
+.main-nav{
+  float: right;
+  list-style: none;
+  margin-top: 55px;
+}
+
+.main-nav li{
+  display: inline-block;
+  margin-left: 40px;
+}
+
+.main-nav li a:link, .main-nav li a:visited{
+  padding: 8px 0;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 90%;
+  border-bottom: 2px solid transparent;
+  transition: border-bottom 0.2s;
+}
+
+.main-nav li a:hover, .main-nav li a:active{
+  border-bottom: 2px solid #e67e22;
+}
+
+/* --------------------------- */
 /* Header */
+/* --------------------------- */
 header{
-  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(img/hero.jpg);
-  background-size: cover;
-  background-position: center;
   height: 100vh;
 }
 
@@ -37,7 +81,7 @@ header{
   /* transform: translate(-50%, -25%); */
 }
 
-header h1{
+.hero-text-box h1{
   margin-top: 0;
   margin-bottom: 20px;
   color: white;
@@ -47,7 +91,9 @@ header h1{
   letter-spacing: 1px;
   word-spacing: 4px;
 }
-
+/* --------------------------- */
+/* Header Buttons */
+/* --------------------------- */
 .btn:link, .btn:visited{
   display: inline-block;
   padding: 10px 30px;
