--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,3 @@
-/* Orange Color #e67e22 */
-
 /* --------------------------- */
 /* Body */
 /* --------------------------- */
@@ -38,6 +36,19 @@ h1, h2{
 
 .box{
   padding: 1%;
+}
+
+/* Clear Float after elements */
+.clearfix{
+  zoom: 1;
+}
+
+.clearfix{
+  content: '.';
+  clear: both;
+  display: block;
+  height: 0;
+  visibility: hidden;
 }
 /* --------------------------- */
 /* Intro */
@@ -241,4 +252,47 @@ header{
   width: 100px;
   margin: 0 auto;
   margin-top: 30px;
+}
+
+steps-box:first-child{
+  text-align: right;
+  padding-right: 3%;
+  margin-top: 30px;
+}
+
+ steps-box:last-child{
+  padding-left: 3%;
+  margin-top: 70px;
+} 
+
+.app-screen{
+  width: 60%;
+}
+
+.works-step{
+  margin-bottom: 50px;
+}
+
+.works-step:last-of-type{
+  margin-bottom: 80px;
+}
+
+.works-step div{
+  color: #e67e22;
+  border: 2px solid #e67e22;
+  display: inline-block;
+  border-radius: 50%;
+  height: 50px;
+  width: 55px;
+  text-align: center;
+  padding: 5px;
+  float: left;
+  font-size: 150%;
+  margin-right: 25px;
+}
+
+.btn-app img{
+  height: 50px;
+  width: auto;
+  margin-right: 10px;
 }
