added text to cities section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -296,3 +296,20 @@ steps-box:first-child{
   width: auto;
   margin-right: 10px;
 }
+
+/* --------------------------- */
+/* Cities */
+/* --------------------------- */
+.section-cities-header{
+  text-align: center;
+}
+
+.section-cities-header:after{
+  display: block;
+  height: 2px;
+  background-color: #e67e22;
+  content: " ";
+  width: 100px;
+  margin: 0 auto;
+  margin-top: 30px;
+}
