--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -313,3 +313,30 @@ steps-box:first-child{
   margin: 0 auto;
   margin-top: 30px;
 }
+
+.box img{
+  width: 100%;
+  height: auto;
+  margin-bottom: 15px;
+}
+
+.city-feature{
+  margin-bottom: 5px;
+}
+
+.cities-detail{
+  font-size: 110%;
+  margin-bottom: 15px;
+}
+
+.icon-small{
+  display: inline-block;
+  width: 25px;
+  text-align: center;
+  color: #e67e22;
+  font-size: 120%;
+  margin-right: 10px;
+  line-height: 120%;
+  vertical-align: middle;
+  margin-top: -5px;
+}
