--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -78,6 +78,7 @@ a:hover, a:visited{
   background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(/resources/img/hero.jpg);
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
 }
 
 /* --------------------------- */
@@ -364,6 +365,13 @@ steps-box:first-child{
 /* --------------------------- */
 /* Customer Testimonials */
 /* --------------------------- */
+.section-testimonials{
+  background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url(/resources/img/back-customers3.jpg);
+  background-size: cover;
+  color: white;
+  background-attachment: fixed;
+}
+
 .testimonials-header{
   text-align: center;
 }
@@ -376,4 +384,34 @@ steps-box:first-child{
   width: 100px;
   margin: 0 auto;
   margin-top: 30px;
+}
+
+blockquote {
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+    position: relative;
+    margin-top: 40px;
+}
+
+blockquote:before {
+    content: "\201C";
+    font-size: 500%;
+    display: block;
+    position: absolute;
+    top: -5px;
+    left: -5px;
+}
+
+cite {
+    font-size: 90%;
+    margin-top: 25px;
+    display: block;
+}
+
+cite img {
+    height: 45px;
+    border-radius: 50%;
+    margin-right: 10px;
+    vertical-align: middle;
 }
