--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -505,3 +505,20 @@ cite img {
   vertical-align: middle;
   margin-top: -5px;
 }
+
+/* --------------------------- */
+/* Contact Form */
+/* --------------------------- */
+.form-header{
+  text-align: center;
+}
+
+.form-header:after{
+  display: block;
+  height: 2px;
+  background-color: #e67e22;
+  content: " ";
+  width: 100px;
+  margin: 0 auto;
+  margin-top: 30px;
+}
