--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,10 +1,15 @@
+/*---------------------------
+/* Basic Setup */
 /* --------------------------- */
 /* Body */
-/* --------------------------- */
-* {
+* { 
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  padding: 0; 
+  box-sizing: border-box; 
+}
+
+*:focus{
+  outline: none;
 }
 
 html{  
@@ -13,18 +18,30 @@ html{
   font-family: 'Lato', sans-serif;
   font-weight: 300;
   font-size: 20px;
-  text-rendering: optimizeLegibility;  
+  text-rendering: optimizeLegibility;    
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
 }
 
+/* Row Elements */
 .row{
-  max-width: 1140px;
+  max-width: 100%;
   margin: 0 auto;
 }
 
+.box{
+  padding: 1%;
+}
+
+/* Section Elements */
 section{
   padding: 80px 0;
 }
 
+/* Header Elements */
 h1, h2, h3{
   font-weight: 300;
   text-transform: uppercase;  
@@ -34,10 +51,7 @@ h1, h2{
   letter-spacing: 1px;
 }
 
-.box{
-  padding: 1%;
-}
-
+/* Link Elements */
 a:link, a:active{
   color: #e67e22;
   padding-bottom: 1px;
@@ -51,6 +65,40 @@ a:hover, a:visited{
   padding-bottom: 1px;
   text-decoration: none;
   border-bottom: 1px solid transparent;
+}
+
+/* Button Elements */
+.btn:link, .btn:visited, input[type=submit]{
+  display: inline-block;
+  padding: 10px 30px;
+  font-weight: 300;
+  text-decoration: none;
+  border-radius: 200px;  
+  transition: background-color 0.2s, border 0.2s, color 0.2s;
+  margin-right: 15px;
+}
+
+.btn-full:link, .btn-full:visited, input[type=submit]{
+  background-color: #e67e22;
+  border: 1px solid #e67e22;
+  color: white;
+}
+
+.btn-ghost:link, .btn-ghost:visited{
+  border: 1px solid #e67e22;
+  color: #e67e22;
+}
+
+.btn-full:hover, .btn-full:active, input[type=submit]:hover, input[type=submit]:active{
+  border: 1px solid #e67e22;
+  background-color: white;
+  color: #e67e22;
+  cursor: pointer;
+}
+
+.btn-ghost:hover, .btn-ghost:active{
+  border: 1px solid white;
+  color: white;
 }
 
 /* Clear Float after elements */
@@ -135,37 +183,6 @@ header{
   word-spacing: 4px;
 }
 
-.btn:link, .btn:visited{
-  display: inline-block;
-  padding: 10px 30px;
-  font-weight: 300;
-  text-decoration: none;
-  border-radius: 200px;  
-  transition: background-color 0.2s, border 0.2s, color 0.2s;
-  margin-right: 15px;
-}
-
-.btn-full:link, .btn-full:visited{
-  background-color: #e67e22;
-  border: 1px solid #e67e22;
-  color: white;
-}
-
-.btn-ghost:link, .btn-ghost:visited{
-  border: 1px solid #e67e22;
-  color: #e67e22;
-}
-
-.btn-full:hover, .btn-full:active{
-  border: 1px solid #e67e22;
-  background-color: white;
-  color: #e67e22;
-}
-
-.btn-ghost:hover, .btn-ghost:active{
-  border: 1px solid white;
-  color: white;
-}
 
 /* --------------------------- */
 /* Features */
@@ -283,7 +300,8 @@ steps-box:first-child{
 } 
 
 .app-screen{
-  width: 60%;
+  height: 400px;
+  width: auto;
 }
 
 .works-step{
@@ -521,4 +539,67 @@ cite img {
   width: 100px;
   margin: 0 auto;
   margin-top: 30px;
+}
+
+.contact-form{
+  width: 60%;
+  margin: 0 auto;
+}
+
+input[type=text],input[type=email], select, textarea{
+  width: 100%;
+  padding: 7px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+}
+
+textarea{
+  height: 100px;
+}
+
+input[type=checkbox]{
+  margin: 10px 5px 10px 0;
+}
+
+/* --------------------------- */
+/* Footer */
+/* --------------------------- */
+footer {
+    background-color: #333;
+    padding: 50px;
+    font-size: 80%;
+}
+
+.footer-nav {
+    list-style: none;
+    float: left;
+}
+
+.footer-nav li{
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-nav li:last-child{
+    margin-right: 0;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited {
+    text-decoration: none;
+    border: 0;
+    color: #888;
+    -webkit-transition: color 0.2s;
+    transition: color 0.2s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+    color: #ddd;
+}
+
+footer p {
+    color: #888;
+    text-align: center;
+    margin-top: 20px;
 }
