added css media for smaller devices

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -57,6 +57,7 @@ a:link, a:active{
   padding-bottom: 1px;
   text-decoration: none;
   border-bottom: 1px solid #e67e22;
+  -webkit-transition: border-bottom 0.2s color 0.2s;
   transition: border-bottom 0.2s color 0.2s;
 }
 
@@ -64,6 +65,7 @@ a:hover, a:visited{
   color: #555;
   padding-bottom: 1px;
   text-decoration: none;
+  -webkit-border-bottom: 1px solid transparent;
   border-bottom: 1px solid transparent;
 }
 
@@ -74,6 +76,7 @@ a:hover, a:visited{
   font-weight: 300;
   text-decoration: none;
   border-radius: 200px;  
+  -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
   transition: background-color 0.2s, border 0.2s, color 0.2s;
   margin-right: 15px;
 }
@@ -123,6 +126,7 @@ a:hover, a:visited{
 }
 
 .backgroundImage{
+  background-image: -webkit-linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(/resources/img/hero.jpg);
   background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(/resources/img/hero.jpg);
   background-size: cover;
   background-position: center;
@@ -156,6 +160,7 @@ a:hover, a:visited{
   text-transform: uppercase;
   font-size: 90%;
   border-bottom: 2px solid transparent;
+  -webkit-transition: border-bottom 0.2s;
   transition: border-bottom 0.2s;
 }
 
@@ -257,12 +262,17 @@ header{
   opacity: 0.7;
   width: 100%;
   height: auto;
+  -webkit-transform: scale(1.15);
+  -ms-transform: scale(1.15);
   transform: scale(1.15);
+  -webkit-transition: transform 0.5s opacity 0.5s;
   transition: transform 0.5s opacity 0.5s;
 }
 
 .meal-photo img:hover{
   opacity: 1;
+  -webkit-transform: scale(1.05);
+  -ms-transform: scale(1.05);
   transform: scale(1.05);
 }
 
