--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -134,12 +134,23 @@ a:hover, a:visited{
 }
 
 /* --------------------------- */
-/* Navigation Bar */
+/* Main Navigation Bar */
 /* --------------------------- */
 .logo{
   height: 100px;
   width: auto;
-  margin-top: 20px;
+  /* margin-top: 15px; */
+  float: left;
+  margin-left: 100px;
+}
+
+.logo-black{
+  height: 50px;
+  width: auto;
+  float: left;
+  /* margin-left: 100px; */
+  margin: 5px 0 5px 100px;
+  display: none;
 }
 
 .main-nav{
@@ -164,9 +175,53 @@ a:hover, a:visited{
   transition: border-bottom 0.2s;
 }
 
-.main-nav li a:hover, .main-nav li a:active{
-  border-bottom: 2px solid #e67e22;
+.main-nav li a:hover, .main-nav li a:active{border-bottom: 2px solid #e67e22;}
+
+/* --------------------------- */
+/* Sticky Navigation Bar */
+/* --------------------------- */
+
+.sticky {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.98);
+    box-shadow: 0 2px 2px #efefef;
+    z-index: 9999;
 }
+
+.sticky .main-nav { margin-top: 18px; }
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+    padding-bottom: 22px;
+    color: #555;
+}
+
+.sticky .logo { display: none; }
+.sticky .logo-black { display: block; }
+
+/* .sticky{
+  position: fixed;
+  top: 0;
+  left:0;
+  width: 100%;
+  background-color: rgba(255,255,255,0.98);
+  box-shadow: 0 2px 2px #efefef
+}
+
+.sticky .main-nav{margin-top: 18px;}
+
+.sticky .main-nav li a:link, .sticky .main-nav li a:visited{
+  padding: 16px 0;
+  color: #555;  
+}
+
+.sticky .logo-black{display: block;}
+.sticky .logo{display: none;}
+
+.sticky .main-nav{ margin-top: 15px;} */
 
 /* --------------------------- */
 /* Header */
