--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,9 +8,7 @@
   box-sizing: border-box; 
 }
 
-*:focus{
-  outline: none;
-}
+*:focus{ outline: none; }
 
 html{  
   background-color: #fff;
@@ -32,14 +30,10 @@ html{
   margin: 0 auto;
 }
 
-.box{
-  padding: 1%;
-}
+.box{ padding: 1%; }
 
 /* Section Elements */
-section{
-  padding: 80px 0;
-}
+section{ padding: 80px 0;}
 
 /* Header Elements */
 h1, h2, h3{
@@ -47,9 +41,7 @@ h1, h2, h3{
   text-transform: uppercase;  
 }
 
-h1, h2{
-  letter-spacing: 1px;
-}
+h1, h2{ letter-spacing: 1px;}
 
 /* Link Elements */
 a:link, a:active{
@@ -105,9 +97,7 @@ a:hover, a:visited{
 }
 
 /* Clear Float after elements */
-.clearfix{
-  zoom: 1;
-}
+.clearfix{ zoom: 1; }
 
 .clearfix{
   content: '.';
@@ -141,7 +131,7 @@ a:hover, a:visited{
   width: auto;
   /* margin-top: 15px; */
   float: left;
-  margin-left: 100px;
+  margin-left: 20px;
 }
 
 .logo-black{
@@ -175,7 +165,7 @@ a:hover, a:visited{
   transition: border-bottom 0.2s;
 }
 
-.main-nav li a:hover, .main-nav li a:active{border-bottom: 2px solid #e67e22;}
+.main-nav li a:hover, .main-nav li a:active{ border-bottom: 2px solid #e67e22; }
 
 /* --------------------------- */
 /* Sticky Navigation Bar */
@@ -201,27 +191,6 @@ a:hover, a:visited{
 
 .sticky .logo { display: none; }
 .sticky .logo-black { display: block; }
-
-/* .sticky{
-  position: fixed;
-  top: 0;
-  left:0;
-  width: 100%;
-  background-color: rgba(255,255,255,0.98);
-  box-shadow: 0 2px 2px #efefef
-}
-
-.sticky .main-nav{margin-top: 18px;}
-
-.sticky .main-nav li a:link, .sticky .main-nav li a:visited{
-  padding: 16px 0;
-  color: #555;  
-}
-
-.sticky .logo-black{display: block;}
-.sticky .logo{display: none;}
-
-.sticky .main-nav{ margin-top: 15px;} */
 
 /* --------------------------- */
 /* Header */
