added alt menu functionality for small devices

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -56,7 +56,24 @@
     width: 100%;
     margin: 0 0 4% 0;
   }
-  .main-nav{display: none;}
+  
+  .main-nav {
+      float: left;
+      margin-top: 30px;
+      margin-left: 25px;
+  }
+  
+  .main-nav li {
+      display: block;
+  }
+  
+  .main-nav li a:link,
+  .main-nav li a:visited {
+      display: block;
+      border: 0;
+      padding: 10px 0;
+      font-size: 100%;
+  }
 
   .long-copy{
     width: 100%;
