--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -75,6 +75,18 @@
       font-size: 100%;
   }
 
+  .sticky .main-nav { margin-top: 10px; float: left;}
+
+  .sticky .main-nav li{
+    margin-bottom: 3px; 
+    /* display: block; */
+  }
+  .sticky .main-nav li a:link,
+.sticky .main-nav li a:visited {
+    padding-bottom: 1px;
+    color: #555;
+}
+
   .long-copy{
     width: 100%;
     margin-left: 0%;
