--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -596,6 +596,30 @@ cite img {
 /* --------------------------- */
 /* Contact Form */
 /* --------------------------- */
+.map-box{
+  width: 100%;
+  height: 500px;
+  position: relative;
+}
+
+#map{
+  width: 100%;
+  height: 500px;
+  position: relative;
+  z-index: 0;
+}
+
+.form-box{
+  position: absolute;
+  width: 50%;
+  top: 0;
+  right: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 10;
+  height: 500px; 
+  /* padding-top: 40px; */
+}
+
 .form-header{
   text-align: center;
 }
@@ -611,7 +635,7 @@ cite img {
 }
 
 .contact-form{
-  width: 60%;
+  width: 90%;
   margin: 0 auto;
 }
 
@@ -623,7 +647,9 @@ input[type=text],input[type=email], select, textarea{
 }
 
 textarea{
-  height: 100px;
+  height: 50%;
+  width: 100%;
+  resize: none;
 }
 
 input[type=checkbox]{
