--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -598,13 +598,13 @@ cite img {
 /* --------------------------- */
 .map-box{
   width: 100%;
-  height: 500px;
+  height: 550px;
   position: relative;
 }
 
 #map{
   width: 100%;
-  height: 500px;
+  height: 550px;
   position: relative;
   z-index: 0;
 }
@@ -616,7 +616,7 @@ cite img {
   right: 0;
   background-color: rgba(255, 255, 255, 0.8);
   z-index: 10;
-  height: 500px; 
+  height: 550px; 
   /* padding-top: 40px; */
 }
 
@@ -656,6 +656,25 @@ input[type=checkbox]{
   margin: 10px 5px 10px 0;
 }
 
+.form-messages{
+  width: 70%;
+  margin: 0 auto;
+  padding: 10px;
+  border-radius: 3px;
+  margin-bottom: 20px;  
+}
+
+.success{ 
+  background-color: rgba(38, 191, 68, 0.8); 
+  color: white;
+  text-align: center;
+}
+
+.error{
+  background-color: rgba(209, 46, 46, 0.8); 
+  color: white;
+  text-align: center;
+}
 /* --------------------------- */
 /* Footer */
 /* --------------------------- */
