--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -116,8 +116,8 @@ a:hover, a:visited{
 }
 
 .backgroundImage{
-  background-image: -webkit-linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(/resources/img/hero.jpg);
-  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(/resources/img/hero.jpg);
+  background-image: -webkit-linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(../img/hero.jpg);
+  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(../img/hero.jpg);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -453,7 +453,8 @@ steps-box:first-child{
 /* Customer Testimonials */
 /* --------------------------- */
 .section-testimonials{
-  background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url(/resources/img/back-customers3.jpg);
+    background-image: -webkit-linear-gradient-linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url(../img/back-customers3.jpg);
+  background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url(../img/back-customers3.jpg);
   background-size: cover;
   color: white;
   background-attachment: fixed;
